# scql

./: .gitignore  CMakeLists.txt  Makefile  README.md  code.cc  code.hh  combinator.py  compute.py  data.cc  data.hh  dataobj.py  iris.S  linear.cc  mnist-labels-ubyte.xz  mnist.S  parse.cc  python-cmds.py  python_cmds.py  python_syntax_ext.py  repl.cc  scql.cc  scql.hh  scql.l  scql.py  scql.y  setup.cfg  storage.py
.github/workflows/: pylint.yml  tests.yml
